; ModuleID = '/home/carl/AnghaBench/darwin-xnu/bsd/kern/extr_kdebug.c_typefilter_create_memory_entry.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/bsd/kern/extr_kdebug.c_typefilter_create_memory_entry.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@MACH_PORT_NULL = common dso_local global i32 0, align 4
@TYPEFILTER_ALLOC_SIZE = common dso_local global i32 0, align 4
@kernel_map = common dso_local global i32 0, align 4
@VM_PROT_READ = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*)* @typefilter_create_memory_entry to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @typefilter_create_memory_entry(i32* %0) #0 {
  %2 = alloca i32*, align 8
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  store i32* %0, i32** %2, align 8
  %5 = load i32*, i32** %2, align 8
  %6 = icmp ne i32* %5, null
  %7 = zext i1 %6 to i32
  %8 = call i32 @assert(i32 %7)
  %9 = load i32, i32* @MACH_PORT_NULL, align 4
  store i32 %9, i32* %3, align 4
  %10 = load i32, i32* @TYPEFILTER_ALLOC_SIZE, align 4
  store i32 %10, i32* %4, align 4
  %11 = load i32, i32* @kernel_map, align 4
  %12 = load i32*, i32** %2, align 8
  %13 = ptrtoint i32* %12 to i32
  %14 = load i32, i32* @VM_PROT_READ, align 4
  %15 = load i32, i32* @MACH_PORT_NULL, align 4
  %16 = call i32 @mach_make_memory_entry_64(i32 %11, i32* %4, i32 %13, i32 %14, i32* %3, i32 %15)
  %17 = load i32, i32* %3, align 4
  ret i32 %17
}

declare dso_local i32 @assert(i32) #1

declare dso_local i32 @mach_make_memory_entry_64(i32, i32*, i32, i32, i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
